--- a/SerilogDemo/SerilogDemo.csproj
+++ b/SerilogDemo/SerilogDemo.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Example.Logging\Example.Logging.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Logs\" />
   </ItemGroup>
 
