--- a/SerilogDemo/appsettings.json
+++ b/SerilogDemo/appsettings.json
@@ -10,7 +10,6 @@
       }
     },
     "WriteTo": [
-      { "Name": "Console" },
       {
         "Name": "File",
         "Args": {
@@ -19,7 +18,7 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
-    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
   "AllowedHosts": "*"
 }
